[package]
name = "espresso"
version = "0.0.1"
authors = ["Jacob Emil Ulvedal Rosborg <jacob@rosborg.dk>"]
edition = "2018"
description = "Espresso is a class file parser"
license = "Apache-2.0"

[dependencies]
bytes = "0.5"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.5"